src/objects/Clause__c.object
<CustomObject>
    <fields>
        <fullName>About_Daikin__c</fullName>
        <label>About Daikin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appendix_Services_and_Tasking__c</fullName>
        <label>Appendix – Services and Tasking</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appendix__c</fullName>
        <label>Appendix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Orders__c</fullName>
        <label>Change Orders</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarifications_Exceptions_Exclusions__c</fullName>
        <label>Clarifications, Exceptions, Exclusions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Clauses</relationshipLabel>
        <relationshipName>Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confidentiality__c</fullName>
        <label>Confidentiality</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Agreement__c</fullName>
        <label>Contractor Agreement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Page__c</fullName>
        <label>Cover Page</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawings_Plans__c</fullName>
        <label>Drawings &amp; Plans</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Survey_Analysis__c</fullName>
        <label>Energy Survey/Analysis</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Warranty__c</fullName>
        <label>Equipment Warranty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Agreements_Terms_Condition__c</fullName>
        <label>Maintenance Agreements Terms &amp; Condition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Equipment_Data__c</fullName>
        <label>Major Equipment Data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Attachment_in_Appendix_for_Project__c</fullName>
        <label>Other Attachment in Appendix for Project</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_and_Acceptance__c</fullName>
        <label>Pricing and Acceptance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Background_Info_General_Info__c</fullName>
        <label>Project Background Info &amp; General Info</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Communication__c</fullName>
        <label>Project Communication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Documentation__c</fullName>
        <label>Project Documentation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Management_Approach__c</fullName>
        <label>Project Management Approach</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Schedule__c</fullName>
        <label>Project Schedule</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Team_Diagram__c</fullName>
        <label>Project Team Diagram</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Warranty__c</fullName>
        <label>Project Warranty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Owner_s_Contingency__c</fullName>
        <label>Recommended Owner’s Contingency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Values_Detail__c</fullName>
        <label>Schedule Values Detail</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_Services__c</fullName>
        <label>Scope of Services</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Capabilities__c</fullName>
        <label>Service Capabilities</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_and_Repair_Terms_and_Conditions__c</fullName>
        <label>Service and Repair Terms and Conditions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_of_Contents__c</fullName>
        <inlineHelpText>Please keep the value of this field &quot;2&quot; if you expect the output document to exceed 10 pages in length.</inlineHelpText>
        <label>Table of Contents</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Conditional_Clauses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Conditional Clauses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Clause</label>
    <nameField>
        <label>Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clauses</pluralLabel>
    <recordTypes>
        <fullName>Maintenance_Agreement</fullName>
        <active>true</active>
        <label>Maintenance Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Repair</fullName>
        <active>true</active>
        <label>Service &amp; Repair</label>
    </recordTypes>
    <recordTypes>
        <fullName>Turnkey</fullName>
        <active>true</active>
        <label>Turnkey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>About_Daikin_2_or_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Service &amp; Repair&quot; ,AND( About_Daikin__c &lt;&gt; &quot;2&quot;,  About_Daikin__c &lt;&gt; &quot;0&quot;),  Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>About_Daikin__c</errorDisplayField>
        <errorMessage>Fields must be in numerical order from top to bottom given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>About_Daikin_MA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
AND( RecordType.Name = &quot;Maintenance Agreement&quot;, Table_of_Contents__c = &quot;2&quot;, AND( About_Daikin__c &lt;&gt; &quot;3&quot;,  About_Daikin__c &lt;&gt; &quot;0&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot;, Table_of_Contents__c = &quot;0&quot;, AND( About_Daikin__c &lt;&gt; &quot;2&quot;,  About_Daikin__c &lt;&gt; &quot;0&quot;))
),Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>About_Daikin__c</errorDisplayField>
        <errorMessage>Fields must be in numerical order from top to bottom given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>About_Daikin_TK</fullName>
        <active>true</active>
        <description>About Daikin can be before or After Executive Summary in numerical order. Neither can be excluded or equal to &quot;0.&quot; All Fields must be in Numerical Order given that a value of &quot;0&quot; does not count.</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Turnkey&quot;, 
OR(
AND(Table_of_Contents__c=&quot;2&quot; , Executive_Summary__c =&quot;4&quot;, About_Daikin__c &lt;&gt; &quot;3&quot;),
AND(Table_of_Contents__c=&quot;2&quot; , Executive_Summary__c =&quot;3&quot;, About_Daikin__c &lt;&gt; &quot;4&quot;),
AND(Table_of_Contents__c=&quot;0&quot; , Executive_Summary__c =&quot;3&quot;, About_Daikin__c &lt;&gt; &quot;2&quot;),
AND(Table_of_Contents__c=&quot;0&quot; , Executive_Summary__c =&quot;2&quot;, About_Daikin__c &lt;&gt; &quot;3&quot;)),Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>About_Daikin__c</errorDisplayField>
        <errorMessage>About Daikin can be before or After Executive Summary in numerical order. Neither can be excluded or equal to &quot;0.&quot; All Fields must be in Numerical Order given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appendix_TK_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name=&quot;Turnkey&quot;, 
OR( 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;12&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 

AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,Change_Orders__c = &quot;14&quot;, Appendix__c &lt;&gt; &quot;16&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,Change_Orders__c = &quot;14&quot;, Appendix__c &lt;&gt; &quot;16&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;13&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;13&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 

AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,Change_Orders__c = &quot;15&quot;, Appendix__c &lt;&gt; &quot;17&quot;), 
AND(Confidentiality__c =&quot;13&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,Change_Orders__c = &quot;15&quot;, Appendix__c &lt;&gt; &quot;17&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;16&quot;), 
AND(Confidentiality__c =&quot;12&quot;,Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;14&quot;, Appendix__c &lt;&gt; &quot;16&quot;), 
AND(Confidentiality__c =&quot;13&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;13&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;16&quot;), 
AND(Confidentiality__c =&quot;13&quot;,Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;14&quot;, Appendix__c &lt;&gt; &quot;16&quot;) 

), 
Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Appendix__c</errorDisplayField>
        <errorMessage>Fields must be in numerical order from top to bottom given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appendix_tk</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name=&quot;Turnkey&quot;, 
OR( 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,Change_Orders__c = &quot;11&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;8&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,Change_Orders__c = &quot;11&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;8&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;,  Appendix__c &lt;&gt; &quot;11&quot;), 
AND(Confidentiality__c =&quot;8&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 
AND(Confidentiality__c =&quot;8&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;10&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;11&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;10&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 

AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,Change_Orders__c = &quot;12&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,Change_Orders__c = &quot;12&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;11&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;9&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;12&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;11&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 

AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,Change_Orders__c = &quot;13&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;11&quot;,Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,Change_Orders__c = &quot;13&quot;, Appendix__c &lt;&gt; &quot;15&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;13&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,Change_Orders__c = &quot;0&quot;, Appendix__c &lt;&gt; &quot;14&quot;), 
AND(Confidentiality__c =&quot;10&quot;,Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,Change_Orders__c = &quot;12&quot;, Appendix__c &lt;&gt; &quot;14&quot;) 
), 
Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Appendix__c</errorDisplayField>
        <errorMessage>Fields must be in numerical order from top to bottom given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bottom_4_MA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( 
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;3&quot;, Executive_Summary__c = &quot;4&quot;, Service_Capabilities__c = &quot;5&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;6&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;7&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;8&quot;,  Appendix__c &lt;&gt; &quot;9&quot;)), 
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;2&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;3&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;4&quot;,  Appendix__c &lt;&gt; &quot;5&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;4&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;5&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;6&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;7&quot;,  Appendix__c &lt;&gt; &quot;8&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;4&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;5&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;6&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;7&quot;,  Appendix__c &lt;&gt; &quot;8&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;3&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;4&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;5&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;6&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;7&quot;,  Appendix__c &lt;&gt; &quot;8&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;3&quot;, Executive_Summary__c = &quot;4&quot;, Service_Capabilities__c = &quot;0&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;5&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;6&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;7&quot;,  Appendix__c &lt;&gt; &quot;8&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;2&quot;, Service_Capabilities__c = &quot;3&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;3&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;0&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;3&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;0&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;3&quot;,OR( Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Maintenance_Agreements_Terms_Condition__c  &lt;&gt; &quot;6&quot;,  Appendix__c &lt;&gt; &quot;7&quot;)),

OR(Scope_of_Services__c = &quot;0&quot;, Pricing_and_Acceptance__c = &quot;0&quot;, Service_and_Repair_Terms_and_Conditions__c = &quot;0&quot;, Appendix__c = &quot;0&quot;) 
),Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorMessage>Scope of Services, Pricing and Acceptance, Maintenance Agreement Terms and Conditions, and Appendix can not equal 0. They also must all be in the above order numerically.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bottom_4_MA_Cont</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(  
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;2&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;, Maintenance_Agreements_Terms_Condition__c &lt;&gt; &quot;5&quot;, Appendix__c &lt;&gt; &quot;6&quot;)), 
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;, Maintenance_Agreements_Terms_Condition__c &lt;&gt; &quot;5&quot;, Appendix__c &lt;&gt; &quot;6&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;2&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;, Maintenance_Agreements_Terms_Condition__c &lt;&gt; &quot;5&quot;, Appendix__c &lt;&gt; &quot;6&quot;)),
AND( RecordType.Name = &quot;Maintenance Agreement&quot; , Table_of_Contents__c = &quot;0&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;2&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;, Maintenance_Agreements_Terms_Condition__c &lt;&gt; &quot;5&quot;, Appendix__c &lt;&gt; &quot;6&quot;))
),Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorMessage>Scope of Services, Pricing and Acceptance, Maintenance Agreement Terms and Conditions, and Appendix can not equal 0. They also must all be in the above order numerically.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bottom_three_SR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( 
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;4&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;5&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;6&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;7&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;2&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;3&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;4&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;5&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;2&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;5&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;2&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;3&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;4&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;5&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;3&quot;, Service_Capabilities__c = &quot;0&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;6&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;2&quot;, Executive_Summary__c = &quot;0&quot;, Service_Capabilities__c = &quot;3&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;6&quot;)),
AND( RecordType.Name = &quot;Service &amp; Repair&quot; , About_Daikin__c = &quot;0&quot;, Executive_Summary__c = &quot;2&quot;, Service_Capabilities__c = &quot;3&quot;, OR(Scope_of_Services__c &lt;&gt; &quot;4&quot;, Pricing_and_Acceptance__c &lt;&gt; &quot;5&quot;,  Service_and_Repair_Terms_and_Conditions__c &lt;&gt; &quot;6&quot;)),
OR(Scope_of_Services__c = &quot;0&quot;, Pricing_and_Acceptance__c = &quot;0&quot;, Service_and_Repair_Terms_and_Conditions__c = &quot;0&quot;)
),Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorMessage>Scope of Services, Pricing and Acceptance, and Service and Repair Terms and Conditions can not equal 0 and must be in that numerical order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Orders_TK</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name=&quot;Turnkey&quot;, 
OR( 
AND(Confidentiality__c = &quot;8&quot;, Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,AND( Change_Orders__c  &lt;&gt; &quot;11&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;9&quot;, Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;10&quot;,AND( Change_Orders__c  &lt;&gt; &quot;11&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;9&quot;, Pricing__c = &quot;8&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;10&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;8&quot;, Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;10&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;9&quot;, Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,AND( Change_Orders__c  &lt;&gt; &quot;12&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;10&quot;, Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;11&quot;,AND( Change_Orders__c  &lt;&gt; &quot;12&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;9&quot;, Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;11&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;10&quot;, Pricing__c = &quot;9&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;11&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;10&quot;, Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,AND( Change_Orders__c  &lt;&gt; &quot;13&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;11&quot;, Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;12&quot;,AND( Change_Orders__c  &lt;&gt; &quot;13&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;11&quot;, Pricing__c = &quot;10&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;12&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;10&quot;, Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;12&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;11&quot;, Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,AND( Change_Orders__c  &lt;&gt; &quot;14&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;12&quot;, Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;13&quot;,AND( Change_Orders__c  &lt;&gt; &quot;14&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;11&quot;, Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;13&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;12&quot;, Pricing__c = &quot;11&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;13&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;12&quot;, Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,AND( Change_Orders__c  &lt;&gt; &quot;15&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;13&quot;, Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;14&quot;,AND( Change_Orders__c  &lt;&gt; &quot;15&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;12&quot;, Pricing__c = &quot;13&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;14&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;)),
AND(Confidentiality__c = &quot;13&quot;, Pricing__c = &quot;12&quot;,Recommended_Owner_s_Contingency__c = &quot;0&quot;,AND( Change_Orders__c  &lt;&gt; &quot;14&quot;, Change_Orders__c &lt;&gt; &quot;0&quot;))
), 
Use_Conditional_Clauses__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Change_Orders__c</errorDisplayField>
        <errorMessage>Fields must be in numerical order from top to bottom given that a value of &quot;0&quot; does not count.</errorMessage>
    </validationRules>
</CustomObject>